# kale

./: .gitignore  Makefile  OWNERS  README.md
.github/workflows/: build_backend.yml  e2e-test.yml
backend/: pyproject.toml
backend/kale/: __init__.py  cli.py  compiler.py  pipeline.py  step.py
backend/kale/common/: astutils.py  flakeutils.py  jputils.py  k8sutils.py  katibutils.py  kfputils.py  kfutils.py  logutils.py  podutils.py  runutils.py  serveutils.py  utils.py  workflowutils.py
backend/kale/config/: __init__.py  config.py  validators.py
backend/kale/kfserving/: __main__.py  transformer.py
backend/kale/marshal/: __init__.py  backend.py  backends.py  decorator.py
backend/kale/processors/: baseprocessor.py  nbprocessor.py  pyprocessor.py
backend/kale/rpc/: errors.py  katib.py  kfp.py  log.py  nb.py  run.py
backend/kale/sdk/: api.py
backend/kale/templates/: nb_function_template.jinja2  new_nb_function_template.jinja2  new_pipeline_template.jinja2
backend/kale/tests/assets/kfp_dsl/: iris.py  pipeline_parameters_and_metrics.py  titanic.py
backend/kale/tests/assets/notebooks/: pipeline_parameters_and_metrics.ipynb
backend/kale/tests/assets/sdk/: pipeline_parameters.py  simple_data_passing.py
backend/kale/tests/e2e/: test_e2e.py
backend/kale/tests/unit_tests/: conftest.py  test_ast.py  test_config.py  test_dependencies.py  test_jputils.py  test_katibutils.py  test_kfputils.py  test_parser.py  test_podutils.py  test_rpc_nb.py
examples/sdk/: skeleton.py
examples/serving/sklearn/: iris.ipynb
examples/serving/xgboost/: iris.ipynb
examples/taxi-cab-classification/: taxicab_pipeline.ipynb
labextension/: package.json
labextension/src/: widget.tsx
labextension/src/components/: AnnotationInput.tsx  DeployButton.tsx  Input.tsx
labextension/src/widgets/: LeftPanel.tsx
labextension/src/widgets/cell-metadata/: CellMetadataEditor.tsx  InlineCellMetadata.tsx  InlineMetadata.tsx
labextension/style/: index.css
